# omnivoice-kit

./: .gitignore  README.md  app.py  backup_all_models.ps1  backup_model.py  build_speaker_prompt.py  clone_tts.py  clone_tts_with_speaker_id.py  colab_finetune_one_voice.ipynb  model_store.py  nllb_translate.py  omnivoice_cli.py  pyproject.toml  requirements.txt  speakers.example.json  speakers.json  tmp_flores_langs.txt  translate_srt.py  verify_checksum.py
assets/speakers/: adam1.pt  mai_am_ap.pt  yen.pt
data/finetune/manifests/: dev.jsonl  train.jsonl
data/finetune/tokens/dev/: data.lst
data/finetune/tokens/dev/audios/: shard-000000.tar
data/finetune/tokens/dev/txts/: shard-000000.jsonl
data/finetune/tokens/train/: data.lst
data/finetune/tokens/train/audios/: shard-000000.tar  shard-000001.tar  (+17 more)
data/raw/text/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt
finetune/: data_config_finetune.json  prepare_manifest.py  run_extract_tokens.ps1  run_finetune.ps1  run_prepare_manifest.ps1  train_config_finetune_sdpa.json  train_config_smoke.json
nllb/: language_options.py  nllb_translate.py  translate_srt.py
omnivoice/: app.py  backup_model.py  build_speaker_prompt.py  clone_tts.py  clone_tts_with_speaker_id.py  model_store.py  omnivoice_cli.py
(+19 files in other folders)
