[project]
name = "omnivoice-voice-clone-kit"
version = "0.1.0"
description = "Standalone voice cloning toolkit built on OmniVoice"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "torchaudio",
  "omnivoice",
  "gradio",
  "soundfile",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "clone_tts"]
